[1748] Fixing the broken layout while surfing in Russian or Dutch.

--- a/htdocs/styles/css/minimal/screen/content_minimal.css
+++ b/htdocs/styles/css/minimal/screen/content_minimal.css
@@ -514,10 +514,10 @@ dl.list {
   }
   #footer p {font-size: 0.9em;}
 
-  #footer a {margin: 0.1em 0 0 0; padding: 0.2em 0 0 0; color:#777; font-weight: normal; text-align: left;}
+  #footer a {margin: 0.1em 0 0 0; padding: 0.2em 0 0 0; color:#777; font-weight: normal; text-align: left; white-space: nowrap; }
   #footer a:hover { text-decoration:underline; }
   #footer a:focus { text-decoration:underline; }
-
+  #footer .linklist {padding-top: 0.2em;}
   #footer #language-select { font-size: 0.9em; }
   
   #footer #flags {padding: 0 0 2.5em 0; line-height: 1em; }
